--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -73,3 +73,10 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - org.example.springboot.controller
+
+sky:
+  alioss:
+    endpoint: oss-cn-shenzhen.aliyuncs.com
+    access-key-id: LTAI5tHzX4fMjySKcCoCvYci
+    access-key-secret: vPKhVa4Kux8jUP6fU4614CQ3FW0wiC
+    bucket-name: cangqiongwaimaipbj
